# copy-maker

./: CMakeLists.txt
hmi/: CMakeLists.txt
hmi/src/: main.cpp
qml/: CMakeLists.txt  main.qml
